--- a/views/admin/product_subcategory_detail.ejs
+++ b/views/admin/product_subcategory_detail.ejs
@@ -35,86 +35,72 @@
             class="scrollable-ref z-20 h-full w-full overflow-y-auto px-5 pb-5 pt-[90px] [&_.simplebar-content]:p-0 [&_.simplebar-track.simplebar-vertical]:w-[10px] [&_.simplebar-track.simplebar-vertical]:mr-0.5 [&_.simplebar-track.simplebar-vertical_.simplebar-scrollbar]:before:bg-slate-600/30">
 
             <p style="font-size: 50px;"> <a type="button" class="btn btn-primary active" data-bs-toggle="button"
-                aria-pressed="true" href="/admin/products">Back </a>
-              ID: <%= product.id %>
+                aria-pressed="true" href="/admin/productsubcategories">Back </a>
+              ID: <%= product_subcategory.id %>
             </p>
             <br>
             <hr>
-            <form class="form-edit-product" >
+            <form class="form-edit-product-subcategory" >
 
               <table class="table">
 
                 <tbody>            
-                    <input type="hidden" name="productId" value="<%= product.id %>">
+                    <input type="hidden" name="id" value="<%= product_subcategory.id %>">
 
                   <tr>
-                    <th scope="row"> Product name</th>
-                    <td colspan="2"><input class=" form-select-lg mb-3" name="name" style="width: 100%;" type="text" value="<%= product.name  %>"></td>
+                    <th scope="row"> Product Subcategory Name</th>
+                    <td colspan="2"><input class=" form-select-lg mb-3" name="name" style="width: 100%;" type="text" value="<%= product_subcategory.product_subcategory_name %>"></td>
 
                   </tr>
                   <tr>
-                    <th scope="row">Product subcategory name:</th>
+                    <th scope="row">Product Category Name:</th>
                     <td colspan="2">
-                      <select class="form-select form-select-lg mb-3" id="subCategorySelect" name="subcategory" data-product_id="<%= product.id %>"> 
-                        <% productCategory.forEach(category=> { %>
-            
-                        <optgroup label="<%= category %>">
-                            <% if (productSubCategory && productSubCategory[category]) { %>
-                                <% const sub=productSubCategory[category] %>
-                                <% sub.forEach(subcategory=> { %>
-                            <option value="<%= subcategory.subcate_name %>" <%= product.product_subcategory_name ===  subcategory.subcate_name  ? 'selected' : '' %>> <%= subcategory.subcate_name %> </option>
-                         <% }) %>
-                            <% } %>
-                          </optgroup>             
-                          <% }) %> 
+                      <select class="form-select form-select-lg mb-3" id="categorySelect" data-product_subcategory_id="<%= product_subcategory.id %>"> 
+                        <% categories.forEach(category=> { %>
+                            <option value="<%=category.name %>" <%=  category.name === product_subcategory.product_category_name ? 'selected' : '' %>>  <%= category.name %> </option> 
+                            <%  }) %>
+
             
                     </select>
                     </td>
                   </tr>
-                  <tr>
-                    <th scope="row">Product category name:</th>
-                    <td colspan="2">
-                       <p class=" form-select-lg mb-3"><%= product.product_category_name %></p>
-                  </tr>
-                  <tr>
-                    <th scope="row">Description:</th>
-                    <td colspan="2"><input class=" form-select-lg mb-3" name="description" style="width: 100%;" type="text" value="<%= product.description  %>"> </td>
+               
+               
 
-                  </tr>
-
-                  <tr>
-                    <th scope="row">Color:</th>
-                    <td colspan="2"><input class=" form-select-lg mb-3"  name="color" style="width: 100%;" type="text" value="<%= product.color %>">
-                    </td>
-
-                  </tr>
-                  <tr>
-                    <th scope="row">Size:</th>
-                    <td colspan="2"><input class=" form-select-lg mb-3"  name="size" style="width: 100%;" type="text" value="<%= product.size %>">
-                    </td>
-
-                  </tr>
-                  <tr>
-                    <th scope="row">Cost:</th>
-                    <td colspan="2"><input class=" form-select-lg mb-3"  name="cost" style="width: 100%;" type="text" value="<%= product.cost %>">
-                    </td>
-
-                  </tr>
-                  <tr>
-                    <th scope="row">Price:</th>
-                    <td colspan="2"><input class=" form-select-lg mb-3"  name="price" style="width: 100%;" type="text" value="<%= product.price %>"> </td>
-
-                  </tr>
+           
                   <tr>
                     <th scope="row">Created at:</th>
                     <td colspan="2">
                       <p class=" form-select-lg mb-3" >
-                        <%= moment(product.created_at).format('DD/MM/YYYY') %>
+                        <%= moment(product_subcategory.created_at).format('DD/MM/YYYY') %>
                       </p>
                     </td>
                   
                   </tr>
-
+                  <tr>
+                    <th scope="row">Created by:</th>
+                    <td colspan="2">
+                      <p class=" form-select-lg mb-3" >
+                        <%= product_subcategory.created_by %>
+                      </p>
+                    </td>
+                  
+                  </tr>
+                  <tr>
+                    <th scope="row">Status:</th>
+                    <td colspan="2">
+                        <form >
+                            <!-- action="/admin/order/status" method="post" -->
+                            <input type="hidden"  value="<% product_subcategory.id %>">
+                            <!-- onchange="this.form.submit()" -->
+                            <select class="status-select"  data-product_subcategories="<%= product_subcategory.id %>"   > 
+                            <option value="0" <%= product_subcategory.status_id === 0 ? 'selected' : '' %>> Locked  </option> 
+                            <option value="1" <%= product_subcategory.status_id === 1 ? 'selected' : '' %>> Active </option> 
+                
+                        </select></form>
+                    </td>
+                  
+                  </tr>
                 </tbody>
 
 
