--- a/views/shopping-cart.ejs
+++ b/views/shopping-cart.ejs
@@ -120,8 +120,10 @@
 				<tr>
 					<td>
 						<div class="cart-checkout-btn pull-right">
-							<button type="submit" class="btn btn-primary checkout-btn">PROCCED TO CHEKOUT</button>
-							<span class="">Checkout with multiples address!</span>
+							<button type="submit" name="cod"  class="btn btn-primary checkout-btn">COD Payment</button>
+						</div>
+						<div class="cart-checkout-btn pull-right">
+							<button type="submit" name="momo" class="btn btn-primary checkout-btn">MOMO payment</button>
 						</div>
 					</td>
 				</tr>
