--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,7 +64,7 @@
                   <div class="slider-header fadeInDown-1"><p style="color: white;">New Product</p></div>
                   <div class="big-text fadeInDown-1"> <p style="color: white;">Mountain Black</p> </div>
                   <div class="excerpt fadeInDown-2 hidden-xs"> <span><p style="color: white;">Top-of-the-line competition mountain bike. Performance-enhancing options include the innovative HL Frame, super-smooth front suspension, and traction for all terrain.</p></span> </div>
-                  <div class="button-holder fadeInDown-3"> <a href="index.php?page=single-product" class="btn-lg btn btn-uppercase btn-light shop-now-button" style="background-color: white;"> <p style="color: black;">Shop Now</p></a> </div>
+                  <div class="button-holder fadeInDown-3"> <a href="/" class="btn-lg btn btn-uppercase btn-light shop-now-button" style="background-color: white;"> <p style="color: black;">Shop Now</p></a> </div>
                 </div>
                 <!-- /.caption --> 
               </div>
@@ -78,7 +78,7 @@
                   <div class="slider-header fadeInDown-1">Summer 2024</div>
                   <div class="big-text fadeInDown-1"> Mountain <span class="highlight">Silver</span> </div>
                   <div class="excerpt fadeInDown-2 hidden-xs"> <span >This bike delivers a high-level of performance on a budget. It is responsive and maneuverable, and offers peace-of-mind when you decide to go off-road.</span> </div>
-                  <div class="button-holder fadeInDown-3"> <a href="index.php?page=single-product" class="btn-lg btn btn-uppercase btn-primary shop-now-button">Shop Now</a> </div>
+                  <div class="button-holder fadeInDown-3"> <a href="/" class="btn-lg btn btn-uppercase btn-primary shop-now-button">Shop Now</a> </div>
                 </div>
                 <!-- /.caption --> 
               </div>
@@ -97,12 +97,7 @@
         <div id="product-tabs-slider" class="scroll-tabs outer-top-vs wow fadeInUp">
           <div class="more-info-tab clearfix ">
             <h3 class="new-product-title pull-left">New Products</h3>
-            <ul class="nav nav-tabs nav-tab-line pull-right" id="new-products-1">
-              <li class="active"><a data-transition-type="backSlide" href="#all" data-toggle="tab">All</a></li>
-              <li><a data-transition-type="backSlide" href="#smartphone" data-toggle="tab">Clothing</a></li>
-              <li><a data-transition-type="backSlide" href="#laptop" data-toggle="tab">Electronics</a></li>
-              <li><a data-transition-type="backSlide" href="#apple" data-toggle="tab">Shoes</a></li>
-            </ul>
+          
             <!-- /.nav-tabs --> 
           </div>
           <div class="tab-content outer-top-xs">
@@ -984,14 +979,7 @@
                   <!-- /.product-info -->
                   <div class="cart clearfix animate-effect">
                     <div class="action">
-                      <ul class="list-unstyled">
-                        <li class="add-cart-button btn-group">
-                          <button class="add-to-cart btn btn-primary icon" data-toggle="dropdown" type="button"> <i class="fa fa-shopping-cart"></i> </button>
-                          <button class="add-to-cart-btn btn btn-primary cart-btn" type="button">Add to cart</button>
-                        </li>
-                        <li class="lnk wishlist"> <a class="add-to-cart" href="detail.html" title="Wishlist"> <i class="icon fa fa-heart"></i> </a> </li>
-                        <li class="lnk"> <a class="add-to-cart" href="detail.html" title="Compare"> <i class="fa fa-signal" aria-hidden="true"></i> </a> </li>
-                      </ul>
+                    
                     </div>
                     <!-- /.action --> 
                   </div>
